--- a/src/components/homepage/homepage.css
+++ b/src/components/homepage/homepage.css
@@ -33,11 +33,14 @@ a{
     align-items: center;
     justify-content: center;
 }
+.intro-section h2{
+    font-weight: 400;
+}
 .intro-section h1,
 .intro-section h2,
 .nav-side-bar h3{
     color: var(--box-color);
-    text-shadow: 0 2px 2px black, 2px 0 2px black;
+    text-shadow: 0 3px 3px black, 3px 0 3px black;
 }
 .skills-section{
     width: 100%;
@@ -127,8 +130,8 @@ a{
 @media only screen and (max-width: 1260px){
     .intro-section h2{
     -webkit-text-stroke-width: 0px;
-    color: black;
-    text-shadow: 0 3px 3px white, 3px 0 3px white;
+    color: var((--box-color));
+    text-shadow: 0 3px 3px black, 3px 0 3px black;
     }
     .one-column-skills-section{
         padding: 0 10px;
@@ -177,10 +180,10 @@ a{
         width: 75%;
     }
    .skills-section{
-    margin: 0;
-    height: 1000px;
-    flex-direction: column;
-    align-items: center;
+        margin: 0;
+        height: 1000px;
+        flex-direction: column;
+        align-items: center;
     }
     .one-column-skills-section{
         width: 100%;
@@ -208,6 +211,6 @@ a{
 
    }
    #homepage-footer{
-    flex-direction: column;
+        flex-direction: column;
    }
 }
