--- a/src/components/homepage/projectCarousel/projectCarousel.css
+++ b/src/components/homepage/projectCarousel/projectCarousel.css
@@ -92,6 +92,7 @@
     height: 80%;
     color:var(--list-color);
     background-color: rgba(255, 255, 255, 0.6);
+    text-shadow: 0 0 0 ;
     z-index: 100;
     display: flex;
     flex-direction: column;
@@ -103,8 +104,8 @@
     height: 71%;
 }
 .front-end-desc-text{
-    top: 29%;
-    height: 69%;
+    top: 28.5%;
+    height: 70%;
 }
 .project-desc-text p{
     width: 90%;
@@ -126,6 +127,18 @@
         width: 70%;
         box-shadow: 0 5px 3px black;
     }
+    .email-desc-text{
+        top: 23%;
+        height: 75.5%;
+    }
+    .landing-desc-text{
+        top:33%;
+        height: 65%;
+    }
+    .front-end-desc-text{
+        top: 35%;
+        height: 63%;
+    }
 }
 @media only screen and (max-width: 1600px){
     
@@ -137,7 +150,7 @@
         font-size: 15px;
     }
 }
-@media only screen and (max-width: 700px){
+@media only screen and (max-width: 730px){
     .project-carousel-selections{
         width: 80%;
         height: 250px;
