--- a/src/components/homepage/homepage.css
+++ b/src/components/homepage/homepage.css
@@ -89,7 +89,30 @@ a{
     text-shadow: 0 0 2px black;
     color: var(--secondary-background-color);
 }
+.github-links-wrapper{
+    width: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+.github-links-container{
+    border: 2px solid black;
+    box-shadow: 0 5px 3px black;
+    border-radius: 8px;
+    background-color: var(--project-carousel);
+    width: 50%;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-around;
+    align-items: center;
+}
 
+.github-links-container li {
+    margin-bottom: 20px ;
+}
+.github-links-container li:hover {
+    color: var(--secondary-background-color);
+}
 #homepage-footer{
     height: 250px;
     font-size: 12px;
