--- a/src/components/homepage/projectCarousel/projectCarousel.css
+++ b/src/components/homepage/projectCarousel/projectCarousel.css
@@ -180,9 +180,11 @@
 @media only screen and (max-width: 730px){
     .project-carousel-selections{
         width: 80%;
-        height: 250px;
-        position:relative;
+        height: min-content;
+        position: relative;
         flex-direction: column;
+        gap: 30px;
+        padding: 30px 0;
     }
     .project-selection,
     .selected{
