--- a/src/components/homepage/homepage.css
+++ b/src/components/homepage/homepage.css
@@ -135,11 +135,6 @@ a{
 .github-logo i{
     margin-right: 5px;
 }
-.vite-logo-footer{
-    width: 14px;
-    margin: 0;
-    padding: 0;
-}
 @media only screen and (max-width: 1260px){
     .intro-section h2{
     -webkit-text-stroke-width: 0px;
@@ -153,6 +148,10 @@ a{
         font-size: 28px !important;
         text-align: center;
         padding: 0 20px;
+    }
+    .email-form-container {
+        width: 90% !important;
+        border: 2px solid green;
     }
 }
 
