--- a/src/components/homepage/homepage.css
+++ b/src/components/homepage/homepage.css
@@ -112,7 +112,7 @@ a{
 .github-links-container li:hover {
     color: var(--secondary-background-color);
 }
-#homepage-footer{
+.homepage-footer{
     height: 250px;
     font-size: 12px;
     background-color: var(--secondary-background-color);
@@ -231,7 +231,7 @@ a{
     .github-links-container li {
         font-size: 1.2rem;
     }
-   #homepage-footer{
+   .homepage-footer{
         flex-direction: column;
    }
 }
