--- a/src/components/homepage/homepage.css
+++ b/src/components/homepage/homepage.css
@@ -149,7 +149,7 @@ a{
         padding: 0 20px;
     }
     .email-form-container {
-        width: 90% !important;
+        width: 90%;
     }
 }
 
