--- a/src/components/homepage/homepage.css
+++ b/src/components/homepage/homepage.css
@@ -151,6 +151,9 @@ a{
     .email-form-container {
         width: 90%;
     }
+    .github-links-container ul{
+        padding: 0 1px;
+    }
 }
 
 @media only screen and (min-width:700px) and (max-width: 1100px){
