drop down menu has white text

--- a/src/components/projects/landing-pages/apartment-landing-page/apartmentLandingPage.css
+++ b/src/components/projects/landing-pages/apartment-landing-page/apartmentLandingPage.css
@@ -474,6 +474,7 @@
     #apartment-landing-hamburger,
     #apartment-landing-hamburger i{
         display:none !important;
+        color: white;
     }
     #apartment-nav-inquire-button{
         padding:5px 10px;
