made the summary route and page

--- a/src/App.css
+++ b/src/App.css
@@ -2,7 +2,7 @@
     --background-color: #918450;
     --secondary-background-color: #A41623;
     --list-color: black;
-    --footer-color: #000000;
+    --footer-color: #FFB563;
     --text-color: white;
     --box-color: #FFB563;
     --project-carousel: #FFD29D;
