added worksamples link and edited json

--- a/src/components/homepage/homepage.css
+++ b/src/components/homepage/homepage.css
@@ -51,7 +51,7 @@
 .project-list{
     width: 100%;
 }
-.project-list h1{
+.project-list h1, h4{
     margin: 0 0 100px;
     padding: 20px 0;
     width: 100%;
@@ -73,6 +73,7 @@
     display: flex;
     justify-content: center;
     align-items: center;
+    margin-bottom: 100px;
 }
 .github-links-container{
     border: 2px solid black;
